Se fijo el footer, se cambiaron las fonts, se quito globalCss por ser redundante

--- a/prayers2.0/src/Components/Footer/Footer.css
+++ b/prayers2.0/src/Components/Footer/Footer.css
@@ -2,7 +2,7 @@ footer{
     clear:both;
     width: 100%;
     margin: 0px auto;
-    background: linear-gradient(to bottom,#FFF4BD 0px,antiquewhite 100%);
+    background-color: #FFF4BD;
     border:  1px solid lightgray;
     border-bottom: none;
     border-radius: 8px 8px 0px 0px;
