--- a/prayers2.0/src/Components/Header/Header.css
+++ b/prayers2.0/src/Components/Header/Header.css
@@ -1,7 +1,4 @@
-.yellow{
-    background-color: #FFF4BD;
-    padding: 10px;
-    border:10px;
-    margin-bottom: 10px;
-    align-content: flex-end;
+.text-link {
+    color: inherit;
+    text-decoration: inherit;
 }
