--- a/prayers2.0/src/Components/Carousel/Carousel.css
+++ b/prayers2.0/src/Components/Carousel/Carousel.css
@@ -1,14 +1,14 @@
 .carousel-img {
     object-fit: cover;
     width: 100%;
-    height: 40vh;
+    height: 100vh;
     margin-left: auto;
     margin-right: auto;
 }
 
 .carousel-wrapper {
     height: 500px;
-    width: 100;
+    width: 100%;
 }
 
 .first {
