--- a/prayers2.0/src/index.css
+++ b/prayers2.0/src/index.css
@@ -5,11 +5,18 @@ usaran para casi todos los componentes */
 https://www.canva.com/colors/color-palettes/pastel-blonde/
  */
 
+
+html {
+    height: 100vh;
+}
+
 body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     font-family: Roboto, Helvetica, Arial, sans-serif;
     background-color: #DAE3E6;
 }
-
 
 .blue {
     background-color: #90a8ee;
