--- a/prayers2.0/src/Components/CarritoCard/CarritoCard.css
+++ b/prayers2.0/src/Components/CarritoCard/CarritoCard.css
@@ -5,7 +5,7 @@
 
 .card {
     width: 250px;
-    background: #232323;
+    background: #c5dfe0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,7 +13,7 @@
     padding: 5px 10px;
     position: relative;
     overflow: hidden;
-    font-family: Bruno, cursive;
+    font-family: Bruno;
 }
 
 •card::before,
@@ -64,7 +64,7 @@
 
 .nft_name,
 .nft_price {
-    color: #ffffffdb;
+    color: #f0f131;
     font-size: small;
 }
 
@@ -90,7 +90,7 @@
     width: 200px;
     padding: 5px 0;
     font-size: 18px;
-    color: white;
+    color: #f0f131;
     border-radius: 5px;
     cursor: pointer;
     transition: all 0.4s;
