--- a/prayers2.0/src/Components/Registro.css
+++ b/prayers2.0/src/Components/Registro.css
@@ -1,4 +1,3 @@
-
 .align {
     align-items: center;
     display: flex;
@@ -61,8 +60,8 @@ a {
     box-shadow: 0 0 250px #000;
     text-align: center;
     padding: 4rem 2rem;
-    background-color: #354152;
-    color: #7e8ba3;
+    background-color:#c5dfe0;
+    color: #f0f131;
     font: 300 1rem/1.5 Helvetica Neue, sans-serif;
     margin: 0;
     min-height: 100%;
@@ -80,12 +79,13 @@ a {
 }
 
 .btn-primary {
-    background-image: linear-gradient(160deg, #8ceabb 0%, #378f7b 100%);
-    color: #fff;
+    background:#90a8ee;
+    color: #f0f131;
     margin-bottom: 6rem;
     width: 100%;
 }
 
 .login__google {
-    background-color: #4285f4;
+    background-color: #90a8ee;
 }
+
