--- a/prayers2.0/src/Components/UI/Individual.css
+++ b/prayers2.0/src/Components/UI/Individual.css
@@ -2,14 +2,14 @@
     width: 190px;
     height: 254px;
     padding: .8em;
-    background: #f5f5f5;
+    background: #c5dfe0;
     position: relative;
     overflow: visible;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .articulo-img {
-    background-color: #f5f5f5;
+    background-color: #c5dfe0;
     height: 40%;
     width: 100%;
     border-radius: .5rem;
