--- a/prayers2.0/src/Components/Registro.css
+++ b/prayers2.0/src/Components/Registro.css
@@ -61,7 +61,7 @@ a {
     text-align: center;
     padding: 4rem 2rem;
     background-color:#c5dfe0;
-    color: #f0f131;
+    color: black;
     font: 300 1rem/1.5 Helvetica Neue, sans-serif;
     margin: 0;
     min-height: 100%;
@@ -80,7 +80,7 @@ a {
 
 .btn-primary {
     background:#90a8ee;
-    color: #f0f131;
+    color: black;
     margin-bottom: 6rem;
     width: 100%;
 }
